# movie-ticket-booking-system-10th-grade-VOOleksandrov22

./: .gitignore
MovieTicketBookingSystem/: MovieTicketBookingSystem.sln  vcpkg.json
MovieTicketBookingSystem/Auth/: Auth.vcxproj
MovieTicketBookingSystem/Clipboard/: Clipboard.vcxproj  Clipboard.vcxproj.filters  clipboard.cpp  clipboard.h  test.cpp
MovieTicketBookingSystem/Colors/: Colors.vcxproj  Colors.vcxproj.filters  colors.h
MovieTicketBookingSystem/Config/: Config.vcxproj  Config.vcxproj.filters  config.cpp  config.h
MovieTicketBookingSystem/Database/: Database.vcxproj  Database.vcxproj.filters  database.cpp  database.h  dbWrapper.cpp  dbWrapper.h
MovieTicketBookingSystem/Date/: Date.vcxproj  date.cpp  date.h
MovieTicketBookingSystem/DateUnitTests/: DateUnitTests.cpp  DateUnitTests.vcxproj  DateUnitTests.vcxproj.filters
MovieTicketBookingSystem/Dict/: Dict.vcxproj  Dict.vcxproj.filters  dict.h
MovieTicketBookingSystem/EmailHandler/: EmailHandler.vcxproj  (+3 more)
db_cpp/: .ninja_deps  .ninja_log  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CompileLibrary.sln  DBModel.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  cmake_install.cmake  compile.txt  database.cpp  database.h  db_cpp.vcxproj  db_cpp.vcxproj.filters  rules.ninja
password_input/: CMakeLists.txt
password_input/vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  password_input.sln  password_input.vcxproj  password_input.vcxproj.filters
utility/: utility.sln
(+48 files in other folders)
